--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-router-dom": "^7.8.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1",
